--- a/sinatra-skeleton-master/app/views/index.erb
+++ b/sinatra-skeleton-master/app/views/index.erb
@@ -1,1 +1,99 @@
-<h1>Home Page</h1>
+    <div class="jumbotron">
+      <header class="container text-center">
+          <h1>Venuegram</h1>
+         <!--  <p> A live instagram feed by location</p> -->
+          <input type="text" class="form-control search-bar" placeholder="Enter location and press return">
+        </header>
+    </div>
+
+    <div class="container">
+      
+      <div class="row">
+        
+        <div class="col-sm-4">
+          <div class="polaroid">
+            <div class="image">
+            </div>
+            <div class="instatext">
+              <h5 class="username"> Username </h5>
+              <p class="description"> This is where a description would go </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-sm-4">
+          <div class="polaroid">
+            <div class="image">
+            </div>
+            <div class="instatext">
+              <p class="description"> This is where a description would go </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-sm-4">
+          <div class="polaroid">
+            <div class="image">
+            </div>
+            <div class="instatext">
+              <p class="description"> This is where a description would go </p>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="row">
+        
+        <div class="col-sm-4">
+          <div class="polaroid">
+            <div class="image">
+            </div>
+            <div class="instatext">
+              <p class="description"> This is where a description would go </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-sm-4">
+          <div class="polaroid">
+            <div class="image">
+            </div>
+            <div class="instatext">
+              <p class="description"> This is where a description would go </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-sm-4">
+          <div class="polaroid">
+            <div class="image">
+            </div>
+            <div class="instatext">
+              <p class="description"> This is where a description would go </p>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
+
+
+    <script type="text/template" id="polaroid-template">
+      <div class="col-sm-4">
+        <div class="polaroid">
+          <div class="image">
+          </div>
+          <div class="instatext">
+            <h2> This is where a instatext would go </h2>
+          </div>
+        </div>
+      </div>
+    </script>
