--- a/sinatra-skeleton-master/app/views/index.erb
+++ b/sinatra-skeleton-master/app/views/index.erb
@@ -26,6 +26,7 @@
             <div class="image">
             </div>
             <div class="instatext">
+              <h5 class="username"> Username </h5>
               <p class="description"> This is where a description would go </p>
             </div>
           </div>
@@ -36,6 +37,7 @@
             <div class="image">
             </div>
             <div class="instatext">
+              <h5 class="username"> Username </h5>
               <p class="description"> This is where a description would go </p>
             </div>
           </div>
@@ -50,6 +52,7 @@
             <div class="image">
             </div>
             <div class="instatext">
+              <h5 class="username"> Username </h5>
               <p class="description"> This is where a description would go </p>
             </div>
           </div>
@@ -60,6 +63,7 @@
             <div class="image">
             </div>
             <div class="instatext">
+              <h5 class="username"> Username </h5>
               <p class="description"> This is where a description would go </p>
             </div>
           </div>
@@ -70,6 +74,7 @@
             <div class="image">
             </div>
             <div class="instatext">
+              <h5 class="username"> Username </h5>
               <p class="description"> This is where a description would go </p>
             </div>
           </div>
@@ -87,13 +92,14 @@
 
 
     <script type="text/template" id="polaroid-template">
-      <div class="col-sm-4">
-        <div class="polaroid">
-          <div class="image">
-          </div>
-          <div class="instatext">
-            <h2> This is where a instatext would go </h2>
+        <div class="col-sm-4">
+          <div class="polaroid">
+            <div class="image">
+            </div>
+            <div class="instatext">
+              <h5 class="username"> Username </h5>
+              <p class="description"> This is where a description would go </p>
+            </div>
           </div>
         </div>
-      </div>
     </script>
