--- a/sinatra-skeleton-master/app/views/layout.erb
+++ b/sinatra-skeleton-master/app/views/layout.erb
@@ -11,10 +11,13 @@
      <link rel="stylesheet" type="text/css" href="stylesheets/css/custom.css">
      <link href='http://fonts.googleapis.com/css?family=Leckerli+One' rel='stylesheet' type='text/css'>
          <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script> -->
+
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="/javascript/application.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="../public/javascript/js/bootstrap.min.js"></script>
-
+    <link rel="stylesheet" href="/stylesheets/application.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
