--- a/sinatra-skeleton-master/app/views/autocomplete.erb
+++ b/sinatra-skeleton-master/app/views/autocomplete.erb
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <style>
       html, body, #map-canvas {
-        height: 80%;
-        width: 80%;
+        height: 300px;
+        width: 100%;
         margin: 0px;
         padding: 0px
       }
