--- a/sinatra-skeleton-master/public/stylesheets/css/custom.css
+++ b/sinatra-skeleton-master/public/stylesheets/css/custom.css
@@ -1,6 +1,6 @@
 .jumbotron {
   background-image: url('/images/jumbo_bg.jpg');
-  height: 450px;
+  height: 300px;
 }
 
 .jumbotron h1 {
@@ -19,18 +19,18 @@
 }
 
 .polaroid {
-  height: 338px;
-  width: 300px;
+  height: 370px;
+  width: 320px;
   background-color: #F5F5F5;
   margin-right: auto;
   margin-left: auto;
   margin-top: 50px;
-  padding-top: 15px;
+  padding-top: 7px;
   }
 
 .image {
-  height: 270px;
-  width: 270px;
+  height: 306px;
+  width: 306px;
   background-color: gray;
   margin: auto;
   margin-bottom: 5px;
@@ -45,7 +45,11 @@
   margin: 0 0 0 15px;
 }
 
-
+.map {
+  width: cover;
+  height: 300px;
+  background-color: white;
+}
 
 
 
