--- a/sinatra-skeleton-master/app/views/index.erb
+++ b/sinatra-skeleton-master/app/views/index.erb
@@ -2,13 +2,143 @@
       <header class="container text-center">
           <h1>Venuegram</h1>
          <!--  <p> A live instagram feed by location</p> -->
+          <!-- <input type="text" class="form-control search-bar" placeholder="Enter location and press return"> -->
           <input type="text" class="form-control search-bar" placeholder="Enter location and press return">
+          <input id="pac-input" class="controls" type="text"
+        placeholder="Enter a location">
         </header>
     </div>
 
     <div class="map">
-    </div>
+  <head>
+    <title>Place Autocomplete</title>
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+    <meta charset="utf-8">
 
+
+
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=places"></script>
+
+    <script>
+function initialize() {
+  var mapOptions = {
+    center: new google.maps.LatLng(-33.8688, 151.2195),
+    zoom: 13
+  };
+  var map = new google.maps.Map(document.getElementById('map-canvas'),
+    mapOptions);
+
+  var input = /** @type {HTMLInputElement} */(
+      document.getElementById('pac-input'));
+
+  var types = document.getElementById('type-selector');
+  map.controls[google.maps.ControlPosition.TOP_LEFT].push(input);
+  map.controls[google.maps.ControlPosition.TOP_LEFT].push(types);
+
+  var autocomplete = new google.maps.places.Autocomplete(input);
+  autocomplete.bindTo('bounds', map);
+
+  var infowindow = new google.maps.InfoWindow();
+  var marker = new google.maps.Marker({
+    map: map,
+    anchorPoint: new google.maps.Point(0, -29)
+  });
+
+  google.maps.event.addListener(autocomplete, 'place_changed', function() {
+    infowindow.close();
+    marker.setVisible(false);
+    var place = autocomplete.getPlace();
+    if (!place.geometry) {
+      return;
+    }
+
+    // If the place has a geometry, then present it on a map.
+    if (place.geometry.viewport) {
+      map.fitBounds(place.geometry.viewport);
+    } else {
+      map.setCenter(place.geometry.location);
+      map.setZoom(17);  // Why 17? Because it looks good.
+    }
+    marker.setIcon(/** @type {google.maps.Icon} */({
+      url: place.icon,
+      size: new google.maps.Size(71, 71),
+      origin: new google.maps.Point(0, 0),
+      anchor: new google.maps.Point(17, 34),
+      scaledSize: new google.maps.Size(35, 35)
+    }));
+    marker.setPosition(place.geometry.location);
+    marker.setVisible(true);
+
+    var address = '';
+    var found_long = place.geometry.location.D;
+    var found_lat = place.geometry.location.k;
+    console.log('D - latitude', found_lat);
+    console.log('K - longitude', found_long);
+    
+
+    function latLongAjax(lat,lon){
+      console.log("doing ajax call");
+      $.ajax({
+        url: '/photos/index',
+        method: 'GET',
+        data: {lat: lat, lon: lon}
+      }).done(function(response){
+        console.log("done");
+        console.log(response);
+        $('.polaroid').remove();
+        $('.image').remove();         
+        $.each(response, function(i, pic){ 
+          $('.col-sm-4').append('<div class="polaroid"> <div class="image"' + (i+1) + '">' + pic +' </div></div>');
+        
+        });
+        
+
+
+
+
+
+        
+      })
+    };
+    latLongAjax(found_lat,found_long);
+    
+    if (place.address_components) {
+      address = [
+        (place.address_components[0] && place.address_components[0].short_name || ''),
+        (place.address_components[1] && place.address_components[1].short_name || ''),
+        (place.address_components[2] && place.address_components[2].short_name || '')
+      ].join(' ');
+    }
+
+    infowindow.setContent('<div><strong>' + place.name + '</strong><br>' + address);
+    infowindow.open(map, marker);
+  });
+
+  // Sets a listener on a radio button to change the filter type on Places
+  // Autocomplete.
+  function setupClickListener(id, types) {
+    var radioButton = document.getElementById(id);
+    google.maps.event.addDomListener(radioButton, 'click', function() {
+      console.log('types',types )
+      autocomplete.setTypes(types);
+    });
+  }
+
+  setupClickListener('changetype-all', []);
+  setupClickListener('changetype-address', ['address']);
+  setupClickListener('changetype-establishment', ['establishment']);
+  setupClickListener('changetype-geocode', ['geocode']);
+}
+
+google.maps.event.addDomListener(window, 'load', initialize);
+
+    </script>
+  </head>
+  <body>
+<!--     <input id="pac-input" class="controls" type="text"
+        placeholder="Enter a location"> -->
+
+    <div id="map-canvas"></div>
     <div class="container">
       
       <div class="row">
@@ -24,7 +154,7 @@
           </div>
         </div>
 
-        <div class="col-sm-4">
+        <!-- <div class="col-sm-4">
           <div class="polaroid">
             <div class="image">
             </div>
@@ -44,11 +174,11 @@
               <p class="description"> This is where a description would go </p>
             </div>
           </div>
-        </div>
+        </di -->v>
 
       </div>
 
-      <div class="row">
+      <!-- <div class="row">
         
         <div class="col-sm-4">
           <div class="polaroid">
@@ -84,22 +214,13 @@
         </div>
 
       </div>
-
+ -->
     </div>
 
+      </div>
+    </div>
+  </body>
+</html>
+    </div>
 
-
-
-
-    <script type="text/template" id="polaroid-template">
-        <div class="col-sm-4">
-          <div class="polaroid">
-            <div class="image">
-            </div>
-            <div class="instatext">
-              <h5 class="username"> Username </h5>
-              <p class="description"> This is where a description would go </p>
-            </div>
-          </div>
-        </div>
-    </script>
+    
