--- a/sinatra-skeleton-master/app/views/index.erb
+++ b/sinatra-skeleton-master/app/views/index.erb
@@ -1,8 +1,6 @@
     <div class="jumbotron">
       <header class="container text-center">
           <h1>Venuegram</h1>
-         <!--  <p> A live instagram feed by location</p> -->
-          <!-- <input type="text" class="form-control search-bar" placeholder="Enter location and press return"> -->
           <input type="text" class="form-control search-bar" placeholder="Enter location and press return">
           <input id="pac-input" class="controls" type="text"
         placeholder="Enter a location">
@@ -14,9 +12,6 @@
     <title>Place Autocomplete</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-
-
-
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=places"></script>
 
     <script>
@@ -85,10 +80,11 @@ function initialize() {
       }).done(function(response){
         console.log("done");
         console.log(response);
+        $('.row').remove();
         $('.polaroid').remove();
         $('.image').remove();         
         $.each(response, function(i, pic){ 
-          $('.col-sm-4').append('<div class="polaroid"> <div class="image"' + (i+1) + '">' + pic +' </div></div>');
+          $('.container').append('<div class="row"> <div class="col-sm-4"> <div class="polaroid"> <div class="image"' + (i+1) + '">' + pic +' </div></div></div></div>');
         
         });
         
@@ -141,43 +137,6 @@ google.maps.event.addDomListener(window, 'load', initialize);
     <div id="map-canvas"></div>
     <div class="container">
       
-      <div class="row">
-        
-        <div class="col-sm-4">
-          <div class="polaroid">
-            <div class="image">
-            </div>
-            <div class="instatext">
-              <h5 class="username"> Username </h5>
-              <p class="description"> This is where a description would go </p>
-            </div>
-          </div>
-        </div>
-
-        <!-- <div class="col-sm-4">
-          <div class="polaroid">
-            <div class="image">
-            </div>
-            <div class="instatext">
-              <h5 class="username"> Username </h5>
-              <p class="description"> This is where a description would go </p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-sm-4">
-          <div class="polaroid">
-            <div class="image">
-            </div>
-            <div class="instatext">
-              <h5 class="username"> Username </h5>
-              <p class="description"> This is where a description would go </p>
-            </div>
-          </div>
-        </di -->v>
-
-      </div>
-
       <!-- <div class="row">
         
         <div class="col-sm-4">
@@ -189,35 +148,9 @@ google.maps.event.addDomListener(window, 'load', initialize);
               <p class="description"> This is where a description would go </p>
             </div>
           </div>
-        </div>
+        </div> -->
 
-        <div class="col-sm-4">
-          <div class="polaroid">
-            <div class="image">
-            </div>
-            <div class="instatext">
-              <h5 class="username"> Username </h5>
-              <p class="description"> This is where a description would go </p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-sm-4">
-          <div class="polaroid">
-            <div class="image">
-            </div>
-            <div class="instatext">
-              <h5 class="username"> Username </h5>
-              <p class="description"> This is where a description would go </p>
-            </div>
-          </div>
-        </div>
-
-      </div>
- -->
     </div>
-
-      </div>
     </div>
   </body>
 </html>
