--- a/sinatra-skeleton-master/public/stylesheets/css/custom.css
+++ b/sinatra-skeleton-master/public/stylesheets/css/custom.css
@@ -18,24 +18,34 @@
 */  background-color: rgba(0,0,0,0);
 }
 
-.polaroid {
-  height: 370px;
-  width: 320px;
-  background-color: #F5F5F5;
-  margin-right: auto;
-  margin-left: auto;
-  margin-top: 50px;
-  padding-top: 7px;
-  }
-
-.image {
-  height: 306px;
-  width: 306px;
-  background-color: gray;
-  margin: auto;
-  margin-bottom: 5px;
+.polaroid-container {
+  padding: 30px 30px 0;
+  text-align: center;
+  margin: 0;  
 }
 
+.polaroid {
+  /*height: 370px;*/
+  background-color: #F5F5F5;
+  display: inline-block;
+  margin-bottom: 3%;
+  margin-right: 1%;
+  padding-top: 7px;
+  width: 24%;
+  border-radius: 3px;
+  -webkit-box-shadow: 1px 1px 3px 0 rgba(0,0,0,.15);
+  box-shadow: 1px 1px 3px 0 rgba(0,0,0,.15);
+}
+
+.polaroid:nth-of-type(4n) {
+  margin-right: 0;
+}
+
+.polaroid img {
+  max-width: 88%;
+  display: block;
+  margin: 0 auto 25%;
+}
 
 .description {
   margin: 0 0 0 15px;
