--- a/sinatra-skeleton-master/app/views/autocomplete.erb
+++ b/sinatra-skeleton-master/app/views/autocomplete.erb
@@ -4,59 +4,7 @@
     <title>Place Autocomplete</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <style>
-      html, body, #map-canvas {
-        height: 300px;
-        width: 100%;
-        margin: 0px;
-        padding: 0px
-      }
-      .controls {
-        margin-top: 16px;
-        border: 1px solid transparent;
-        border-radius: 2px 0 0 2px;
-        box-sizing: border-box;
-        -moz-box-sizing: border-box;
-        height: 32px;
-        outline: none;
-        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
-      }
 
-      #pac-input {
-        background-color: #fff;
-        font-family: Roboto;
-        font-size: 15px;
-        font-weight: 300;
-        margin-left: 12px;
-        padding: 0 11px 0 13px;
-        text-overflow: ellipsis;
-        width: 400px;
-      }
-
-      #pac-input:focus {
-        border-color: #4d90fe;
-        margin-left: -1px;
-        padding-left: 14px;  /* Regular padding-left + 1. */
-        width: 401px;
-      }
-
-      .pac-container {
-        font-family: Roboto;
-        margin: 0 auto;
-      }
-
-      #type-selector {
-        color: #fff;
-        background-color: #4d90fe;
-        padding: 5px 11px 0px 11px;
-      }
-
-      #type-selector label {
-        font-family: Roboto;
-        font-size: 13px;
-        font-weight: 300;
-      }
-    </style>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=places"></script>
     <script>
       function initialize() {
@@ -127,7 +75,7 @@
             $('.polaroid').remove();
             $('.image').remove();         
             $.each(response, function(i, pic){ 
-              $('.polaroid-container').append('<div class="polaroid"> <div class="image"' + (i+1) + '">' + pic +' </div></div>');
+              $('.polaroid-container').append('<div class="polaroid"> <div class="image"' + (i+1) + '">' + pic +'<h5>Username</h5> <p class="description"> This is the description, we should probably limit it </p></div></div>');
             });
           })
         };
@@ -167,7 +115,7 @@
     <div class="jumbotron">
       <header class="container text-center">
         <h1>Venuegram</h1>
-        <p>
+        <p class="search-text">
         <input id="pac-input" class="controls" type="text" placeholder="Enter a location"></p>
         <!-- <input type="text" class="form-control search-bar" placeholder="Enter location and press return"> -->
       </header>
