--- a/sinatra-skeleton-master/public/stylesheets/css/custom.css
+++ b/sinatra-skeleton-master/public/stylesheets/css/custom.css
@@ -1,6 +1,6 @@
 .jumbotron {
   background-image: url('/images/jumbo_bg.jpg');
-  height: 300px;
+  height: 400px;
 }
 
 .jumbotron h1 {
@@ -10,18 +10,22 @@
   font-size: 60pt;
 }
 
-.search-bar {
-  display: inline-block;
-  width: 350px;
-  margin-top: 20px;
-/*  margin-left: 35%;
-*/  background-color: rgba(0,0,0,0);
-}
-
 .polaroid-container {
   padding: 30px 30px 0;
   text-align: center;
   margin: 0;  
+}
+
+.description {
+  padding-left: 7%;
+  text-align: left;
+}
+
+
+
+h5 {
+  padding-left: 7%;
+  text-align: left;
 }
 
 .polaroid {
@@ -44,7 +48,8 @@
 .polaroid img {
   max-width: 88%;
   display: block;
-  margin: 0 auto 25%;
+  margin: 0 auto;
+  margin-top: 2.5%;
 }
 
 .description {
@@ -61,7 +66,8 @@
   background-color: white;
 }
 
-
+/*
+==============================*/
     
 html, body, #map-canvas {
   height: 300px;
@@ -69,6 +75,7 @@ html, body, #map-canvas {
   margin: 0px;
   padding: 0px
 }
+
 .controls {
   margin-top: 16px;
   border: 1px solid transparent;
@@ -81,7 +88,7 @@ html, body, #map-canvas {
 }
 
 #pac-input {
-  color: black;
+  color: #EDEDED
   /*background-color: #fff;*/
   font-family: Roboto;
   font-size: 15px;
@@ -90,29 +97,39 @@ html, body, #map-canvas {
   padding: 0 11px 0 13px;
   text-overflow: ellipsis;
   width: 400px;
+
+  display: inline-block;
+  width: 350px;
+  margin-top: 20px;
+/*  margin-left: 35%; */  
+  background-color: rgba(0,0,0,0);
+  border: 2px solid #C1C1C1;
+  border-radius: 10px;
 }
+
 
 #pac-input:focus {
-  border-color: #4d90fe;
-  margin-left: -1px;
-  padding-left: 14px;  /* Regular padding-left + 1. */
-  width: 401px;
+  border: 2px solid #F7F7F7;
+ /* border-color: #4d90fe;*/
+/*  margin-left: -1px;
+  padding-left: 14px;   Regular padding-left + 1. 
+  width: 350px; */
 }
 
-.pac-container {
+/*.pac-container {
   font-family: Roboto;
-}
+}*/
 
-#type-selector {
+/*#type-selector {
   color: #fff;
   background-color: #4d90fe;
   padding: 5px 11px 0px 11px;
-}
-
+}*/
+/*
 #type-selector label {
   font-family: Roboto;
   font-size: 13px;
   font-weight: 300;
-}
+}*/
 
 
