--- a/sinatra-skeleton-master/app/views/autocomplete.erb
+++ b/sinatra-skeleton-master/app/views/autocomplete.erb
@@ -4,184 +4,121 @@
     <title>Place Autocomplete</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <style>
-      html, body, #map-canvas {
-        height: 300px;
-        width: 100%;
-        margin: 0px;
-        padding: 0px
-      }
-      .controls {
-        margin-top: 16px;
-        border: 1px solid transparent;
-        border-radius: 2px 0 0 2px;
-        box-sizing: border-box;
-        -moz-box-sizing: border-box;
-        height: 32px;
-        outline: none;
-        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
-      }
 
-      #pac-input {
-        background-color: #fff;
-        font-family: Roboto;
-        font-size: 15px;
-        font-weight: 300;
-        margin-left: 12px;
-        padding: 0 11px 0 13px;
-        text-overflow: ellipsis;
-        width: 400px;
-      }
-
-      #pac-input:focus {
-        border-color: #4d90fe;
-        margin-left: -1px;
-        padding-left: 14px;  /* Regular padding-left + 1. */
-        width: 401px;
-      }
-
-      .pac-container {
-        font-family: Roboto;
-      }
-
-      #type-selector {
-        color: #fff;
-        background-color: #4d90fe;
-        padding: 5px 11px 0px 11px;
-      }
-
-      #type-selector label {
-        font-family: Roboto;
-        font-size: 13px;
-        font-weight: 300;
-      }
-
-    </style>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=places"></script>
-
     <script>
-function initialize() {
-  var mapOptions = {
-    center: new google.maps.LatLng(-33.8688, 151.2195),
-    zoom: 13
-  };
-  var map = new google.maps.Map(document.getElementById('map-canvas'),
-    mapOptions);
+      function initialize() {
+      var mapOptions = {
+        center: new google.maps.LatLng(-33.8688, 151.2195),
+        zoom: 13, scrollwheel: false
+      };
+      var map = new google.maps.Map(document.getElementById('map-canvas'),
+        mapOptions);
 
-  var input = /** @type {HTMLInputElement} */(
-      document.getElementById('pac-input'));
+      var input = /** @type {HTMLInputElement} */(
+          document.getElementById('pac-input'));
 
-  var types = document.getElementById('type-selector');
-  map.controls[google.maps.ControlPosition.TOP_LEFT].push(input);
-  map.controls[google.maps.ControlPosition.TOP_LEFT].push(types);
+      var types = document.getElementById('type-selector');
 
-  var autocomplete = new google.maps.places.Autocomplete(input);
-  autocomplete.bindTo('bounds', map);
+      var autocomplete = new google.maps.places.Autocomplete(input);
+      autocomplete.bindTo('bounds', map);
 
-  var infowindow = new google.maps.InfoWindow();
-  var marker = new google.maps.Marker({
-    map: map,
-    anchorPoint: new google.maps.Point(0, -29)
-  });
+      var infowindow = new google.maps.InfoWindow();
+      var marker = new google.maps.Marker({
+        map: map,
+        anchorPoint: new google.maps.Point(0, -29)
+      });
 
-  google.maps.event.addListener(autocomplete, 'place_changed', function() {
-    infowindow.close();
-    marker.setVisible(false);
-    var place = autocomplete.getPlace();
-    if (!place.geometry) {
-      return;
-    }
+      google.maps.event.addListener(autocomplete, 'place_changed', function() {
+        infowindow.close();
+        marker.setVisible(false);
+        var place = autocomplete.getPlace();
+        console.log(autocomplete);
+        if (!place.geometry) {
+          return;
+        }
 
-    // If the place has a geometry, then present it on a map.
-    if (place.geometry.viewport) {
-      map.fitBounds(place.geometry.viewport);
-    } else {
-      map.setCenter(place.geometry.location);
-      map.setZoom(17);  // Why 17? Because it looks good.
-    }
-    marker.setIcon(/** @type {google.maps.Icon} */({
-      url: place.icon,
-      size: new google.maps.Size(71, 71),
-      origin: new google.maps.Point(0, 0),
-      anchor: new google.maps.Point(17, 34),
-      scaledSize: new google.maps.Size(35, 35)
-    }));
-    marker.setPosition(place.geometry.location);
-    marker.setVisible(true);
+        // If the place has a geometry, then present it on a map.
+        if (place.geometry.viewport) {
+          map.fitBounds(place.geometry.viewport);
+        } else {
+          map.setCenter(place.geometry.location);
+          map.setZoom(17);  // Why 17? Because it looks good.
+        }
+        marker.setIcon(/** @type {google.maps.Icon} */({
+          url: place.icon,
+          size: new google.maps.Size(71, 71),
+          origin: new google.maps.Point(0, 0),
+          anchor: new google.maps.Point(17, 34),
+          scaledSize: new google.maps.Size(35, 35)
+        }));
+        marker.setPosition(place.geometry.location);
+        marker.setVisible(true);
 
-    var address = '';
-    var found_long = place.geometry.location.D;
-    var found_lat = place.geometry.location.k;
-    console.log('D - latitude', found_lat);
-    console.log('K - longitude', found_long);
-    
+        var address = '';
+        var found_long = place.geometry.location.D;
+        var found_lat = place.geometry.location.k;
+        console.log('D - latitude', found_lat);
+        console.log('K - longitude', found_long);
 
-    function latLongAjax(lat,lon){
-      console.log("doing ajax call");
-      $.ajax({
-        url: '/photos/index',
-        method: 'GET',
-        data: {lat: lat, lon: lon}
-      }).done(function(response){
-        console.log("done");
-        console.log(response);
-        $('.polaroid').remove();
-        $('.image').remove();         
-        $.each(response, function(i, pic){ 
-          $('.col-sm-4').append('<div class="polaroid"> <div class="image"' + (i+1) + '">' + pic +' </div></div>');
-        
+        function latLongAjax(lat,lon){
+          console.log("doing ajax call");
+          $.ajax({
+            url: '/photos/index',
+            method: 'GET',
+            data: {lat: lat, lon: lon}
+          }).done(function(response){
+            console.log("done");
+            console.log(response);
+            $('.polaroid').remove();
+            $('.image').remove();         
+            $.each(response, function(i, pic){ 
+              $('.polaroid-container').append('<div class="polaroid animated fadeInUp"> <div class="image animated fadeInUp"' + (i+1) + '">' + pic +'<h5>Username</h5> <p class="animated fadeInUp description"> This is the description, we should probably limit it </p></div></div>');
+            });
+          })
+        };
+
+        latLongAjax(found_lat,found_long);
+        if (place.address_components) {
+          address = [
+            (place.address_components[0] && place.address_components[0].short_name || ''),
+            (place.address_components[1] && place.address_components[1].short_name || ''),
+            (place.address_components[2] && place.address_components[2].short_name || '')
+          ].join(' ');
+        }
+
+        infowindow.setContent('<div><strong>' + place.name + '</strong><br>' + address);
+        infowindow.open(map, marker);
+      });
+
+      // Sets a listener on a radio button to change the filter type on Places
+      // Autocomplete.
+      function setupClickListener(id, types) {
+      //   // var radioButton = document.getElementById(id);
+        google.maps.event.addDomListener(radioButton, 'click', function() {
+          console.log('types',types )
+          autocomplete.setTypes(types);
         });
-        
+      }
+      // setupClickListener('changetype-all', []);
+      // setupClickListener('changetype-address', ['address']);
+      // setupClickListener('changetype-establishment', ['establishment']);
+      // setupClickListener('changetype-geocode', ['geocode']);
+        }
 
-
-
-
-
-        
-      })
-    };
-    latLongAjax(found_lat,found_long);
-    
-    if (place.address_components) {
-      address = [
-        (place.address_components[0] && place.address_components[0].short_name || ''),
-        (place.address_components[1] && place.address_components[1].short_name || ''),
-        (place.address_components[2] && place.address_components[2].short_name || '')
-      ].join(' ');
-    }
-
-    infowindow.setContent('<div><strong>' + place.name + '</strong><br>' + address);
-    infowindow.open(map, marker);
-  });
-
-  // Sets a listener on a radio button to change the filter type on Places
-  // Autocomplete.
-  function setupClickListener(id, types) {
-    var radioButton = document.getElementById(id);
-    google.maps.event.addDomListener(radioButton, 'click', function() {
-      console.log('types',types )
-      autocomplete.setTypes(types);
-    });
-  }
-
-  setupClickListener('changetype-all', []);
-  setupClickListener('changetype-address', ['address']);
-  setupClickListener('changetype-establishment', ['establishment']);
-  setupClickListener('changetype-geocode', ['geocode']);
-}
-
-google.maps.event.addDomListener(window, 'load', initialize);
-
+      google.maps.event.addDomListener(window, 'load', initialize);
     </script>
   </head>
+  
   <body>
-    <input id="pac-input" class="controls" type="text"
-        placeholder="Enter a location">
-
+    <div class="jumbotron">
+      <header class="container text-center">
+        <h1 class="animated fadeInUp">Venuegram</h1>
+        <input id="pac-input" class="controls" type="text" placeholder="Enter a location"></p>
+      </header>
+    </div>
     <div id="map-canvas"></div>
-    <div class="row">
-      <div class="col-sm-4">
-      </div>
+    <div class="row polaroid-container">
     </div>
   </body>
 </html>
