--- a/sinatra-skeleton-master/app/views/layout.erb
+++ b/sinatra-skeleton-master/app/views/layout.erb
@@ -4,15 +4,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap 101 Template</title>
+    <title>Venuegram</title>
+    <link rel="stylesheet" type="text/css" href="stylesheets/css/animate.css">
+    <link rel="icon" 
+      type="image/png" 
+      href="/images/venuegram_icon.png">
 
     <!-- Bootstrap -->
     <link href="stylesheets/css/bootstrap.css" rel="stylesheet">
      <link rel="stylesheet" type="text/css" href="stylesheets/css/custom.css">
      <link href='http://fonts.googleapis.com/css?family=Leckerli+One' rel='stylesheet' type='text/css'>
-         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script> -->
-
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script> -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="/javascript/application.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
