--- a/sinatra-skeleton-master/public/stylesheets/css/custom.css
+++ b/sinatra-skeleton-master/public/stylesheets/css/custom.css
@@ -1,6 +1,6 @@
 .jumbotron {
   background-image: url('/images/jumbo_bg.jpg');
-  height: 450px;
+  height: 400px;
 }
 
 .jumbotron h1 {
@@ -10,32 +10,47 @@
   font-size: 60pt;
 }
 
-.search-bar {
-  display: inline-block;
-  width: 350px;
-  margin-top: 20px;
-/*  margin-left: 35%;
-*/  background-color: rgba(0,0,0,0);
+.polaroid-container {
+  padding: 30px 30px 0;
+  text-align: center;
+  margin: 0;  
+}
+
+.description {
+  padding-left: 7%;
+  text-align: left;
+}
+
+
+
+h5 {
+  padding-left: 7%;
+  text-align: left;
 }
 
 .polaroid {
-  height: 338px;
-  width: 300px;
+  /*height: 370px;*/
   background-color: #F5F5F5;
-  margin-right: auto;
-  margin-left: auto;
-  margin-top: 50px;
-  padding-top: 15px;
-  }
-
-.image {
-  height: 270px;
-  width: 270px;
-  background-color: gray;
-  margin: auto;
-  margin-bottom: 5px;
+  display: inline-block;
+  margin-bottom: 3%;
+  margin-right: 1%;
+  padding-top: 7px;
+  width: 24%;
+  border-radius: 3px;
+  -webkit-box-shadow: 1px 1px 3px 0 rgba(0,0,0,.15);
+  box-shadow: 1px 1px 3px 0 rgba(0,0,0,.15);
 }
 
+.polaroid:nth-of-type(4n) {
+  margin-right: 0;
+}
+
+.polaroid img {
+  max-width: 88%;
+  display: block;
+  margin: 0 auto;
+  margin-top: 2.5%;
+}
 
 .description {
   margin: 0 0 0 15px;
@@ -45,7 +60,76 @@
   margin: 0 0 0 15px;
 }
 
+.map {
+  width: cover;
+  height: 300px;
+  background-color: white;
+}
+
+/*
+==============================*/
+    
+html, body, #map-canvas {
+  height: 300px;
+  width: 100%;
+  margin: 0px;
+  padding: 0px
+}
+
+.controls {
+  margin-top: 16px;
+  border: 1px solid transparent;
+  border-radius: 2px 0 0 2px;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  height: 32px;
+  outline: none;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+}
+
+#pac-input {
+  color: #EDEDED
+  /*background-color: #fff;*/
+  font-family: Roboto;
+  font-size: 15px;
+  font-weight: 300;
+  margin-left: 12px;
+  padding: 0 11px 0 13px;
+  text-overflow: ellipsis;
+  width: 400px;
+
+  display: inline-block;
+  width: 350px;
+  margin-top: 20px;
+/*  margin-left: 35%; */  
+  background-color: rgba(0,0,0,0);
+  border: 2px solid #C1C1C1;
+  border-radius: 10px;
+}
 
 
+#pac-input:focus {
+  border: 2px solid #F7F7F7;
+ /* border-color: #4d90fe;*/
+/*  margin-left: -1px;
+  padding-left: 14px;   Regular padding-left + 1. 
+  width: 350px; */
+}
+
+/*.pac-container {
+  font-family: Roboto;
+}*/
+
+/*#type-selector {
+  color: #fff;
+  background-color: #4d90fe;
+  padding: 5px 11px 0px 11px;
+}*/
+/*
+#type-selector label {
+  font-family: Roboto;
+  font-size: 13px;
+  font-weight: 300;
+}*/
 
 
