--- a/sinatra-skeleton-master/app/views/layout.erb
+++ b/sinatra-skeleton-master/app/views/layout.erb
@@ -20,6 +20,8 @@
     <script src="/javascript/application.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="../javascript/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/1.4.14/jquery.scrollTo.min.js"></script>
+
     <link rel="stylesheet" href="/stylesheets/application.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
