final version: adjusted starting coordinates of google maps

--- a/sinatra-skeleton-master/app/views/index.erb
+++ b/sinatra-skeleton-master/app/views/index.erb
@@ -12,7 +12,7 @@
 
       function initialize() {
       var mapOptions = {
-        center: new google.maps.LatLng(-33.8688, 151.2195),
+        center: new google.maps.LatLng(49.2827291, -123.12073750000002),
         zoom: 13, scrollwheel: false
       };
       var map = new google.maps.Map(document.getElementById('map-canvas'),
