--- a/sinatra-skeleton-master/app/views/index.erb
+++ b/sinatra-skeleton-master/app/views/index.erb
@@ -1,9 +1,7 @@
-
-
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Place Autocomplete</title>
+    <title>Venuegram</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
 
@@ -96,7 +94,7 @@
           ].join(' ');
         }
 
-        infowindow.setContent('<div><strong>' + place.name + '</strong><br>' + address);
+        infowindow.setContent('<div><strong>' + place.name + '</strong><br></div>' + address);
         infowindow.open(map, marker);
       });
 
@@ -128,7 +126,7 @@
       </header>
     </div>
     <div id="map-canvas"></div>
-    <div class="row polaroid-container" id="scroll-target">
-    </div>
+    <div class="row polaroid-container" id="scroll-target"></div>
+    <div id="credits"><p>Built in a blitz by Eric, Maggie & Ramon</p></div>
   </body>
 </html>
