--- a/sinatra-skeleton-master/app/views/layout.erb
+++ b/sinatra-skeleton-master/app/views/layout.erb
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Venuegram</title>
     <link rel="stylesheet" type="text/css" href="stylesheets/css/animate.css">
-    <link rel="icon" 
-      type="image/png" 
-      href="/images/venuegram_icon.png">
+    <link rel="icon" type="image/png" href="/images/venuegram_icon.png">
 
     <!-- Bootstrap -->
     <link href="stylesheets/css/bootstrap.css" rel="stylesheet">
